--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@next/third-parties": "^15.0.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
