--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.1",
+    "@tabler/icons-react": "^3.20.0",
     "@vercel/edge-config": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "next-themes": "^0.3.0",
